Add carousel to page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
 
     <section class="block carousel">
         <div class="carousel__images">
-            <img src="assets/img/klopp.jpg" alt="">
+            <div class="swiper swiper3">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="assets/img/lewandowski.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/frenkie.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/klopp.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/img/messi.jpg" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="wrapper">
             <div class="row">
@@ -28,12 +43,12 @@
                 </div>
                 <div class="col">
                     <div class="carousel__navigation">
-                        <button class="prev">
+                        <button class="prev swiper-button-prev">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
                                 <path fill-rule="evenodd" d="M18 10a.75.75 0 01-.75.75H4.66l2.1 1.95a.75.75 0 11-1.02 1.1l-3.5-3.25a.75.75 0 010-1.1l3.5-3.25a.75.75 0 111.02 1.1l-2.1 1.95h12.59A.75.75 0 0118 10z" clip-rule="evenodd" />
                             </svg>
                         </button>
-                        <button class="next">
+                        <button class="next swiper-button-next">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
                                 <path fill-rule="evenodd" d="M2 10a.75.75 0 01.75-.75h12.59l-2.1-1.95a.75.75 0 111.02-1.1l3.5 3.25a.75.75 0 010 1.1l-3.5 3.25a.75.75 0 11-1.02-1.1l2.1-1.95H2.75A.75.75 0 012 10z" clip-rule="evenodd" />
                             </svg>
@@ -44,7 +59,7 @@
 
             <div class="row">
                 <div class="col dual">
-                    <div class="swiper">
+                    <div class="swiper swiper1">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="clip">
@@ -65,9 +80,41 @@
                             <div class="swiper-slide">
                                 <div class="clip">
                                     <div class="clip__image">
+                                        <img src="assets/img/frenkie.jpg" alt="">
+                                    </div>
+                                    <h3 class="clip__title">Frenkie De Jong continues to reject Manchester United.</h3>
+                                    <a class="clip__duration">
+                                        <span class="ico">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" className="w-5 h-5">
+                                                <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
+                                            </svg>
+                                        </span>
+                                        <span class="time">1:49 mins</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="clip">
+                                    <div class="clip__image">
                                         <img src="assets/img/klopp.jpg" alt="">
                                     </div>
-                                    <h3 class="clip__title">Lewandowski ready to push FC Barcelona to new heights.</h3>
+                                    <h3 class="clip__title">Jurgen Klopp on Coutinho transfer and January window</h3>
+                                    <a class="clip__duration">
+                                        <span class="ico">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" className="w-5 h-5">
+                                                <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
+                                            </svg>
+                                        </span>
+                                        <span class="time">1:49 mins</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="clip">
+                                    <div class="clip__image">
+                                        <img src="assets/img/messi.jpg" alt="">
+                                    </div>
+                                    <h3 class="clip__title">Messi continues to dominate Ligue 1 while CR7 gets hawked around.</h3>
                                     <a class="clip__duration">
                                         <span class="ico">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" className="w-5 h-5">
@@ -82,18 +129,75 @@
                     </div>
                 </div>
                 <div class="col single">
-                    <div class="headline">
-                        <span class="label">first team</span>
-                        <h2 class="title">Jurgen Klopp on Coutinho transfer and January window</h2>
-                        <div class="clip__info">
-                            <a class="ico" href="">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" className="w-5 h-5">
-                                    <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
-                                </svg>
-                            </a>
-                            <div class="content">
-                                <span>Watch the video</span>
-                                <span class="time">1:49 mins</span>
+                    <div class="swiper swiper2">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="headline">
+                                    <span class="label">first team</span>
+                                    <h2 class="title">Lewandowski ready to push FC Barcelona to new heights.</h2>
+                                    <div class="clip__info">
+                                        <a class="ico" href="">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" className="w-5 h-5">
+                                                <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
+                                            </svg>
+                                        </a>
+                                        <div class="content">
+                                            <span>Watch the video</span>
+                                            <span class="time">1:49 mins</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="headline">
+                                    <span class="label">first team</span>
+                                    <h2 class="title">Frenkie De Jong continues to reject Manchester United.</h2>
+                                    <div class="clip__info">
+                                        <a class="ico" href="">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" className="w-5 h-5">
+                                                <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
+                                            </svg>
+                                        </a>
+                                        <div class="content">
+                                            <span>Watch the video</span>
+                                            <span class="time">1:49 mins</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="headline">
+                                    <span class="label">first team</span>
+                                    <h2 class="title">Jurgen Klopp on Coutinho transfer and January window</h2>
+                                    <div class="clip__info">
+                                        <a class="ico" href="">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" className="w-5 h-5">
+                                                <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
+                                            </svg>
+                                        </a>
+                                        <div class="content">
+                                            <span>Watch the video</span>
+                                            <span class="time">1:49 mins</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="headline">
+                                    <span class="label">first team</span>
+                                    <h2 class="title">Messi continues to dominate Ligue 1 while CR7 gets hawked around.</h2>
+                                    <div class="clip__info">
+                                        <a class="ico" href="">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" className="w-5 h-5">
+                                                <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z" />
+                                            </svg>
+                                        </a>
+                                        <div class="content">
+                                            <span>Watch the video</span>
+                                            <span class="time">1:49 mins</span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
